// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calls remove when FileProgress remove button clicked 1`] = `
<FileList
  files={
    Array [
      Object {
        "name": "asdf",
      },
    ]
  }
  removeFile={[Function]}
>
  <div
    className="File-List"
  >
    <header
      className="File-List-Header"
    >
      Bounty Files
       
      1
    </header>
    <div
      className="List"
    >
      <ListItem
        item="asdf"
        key="asdf"
        remove={[Function]}
      >
        <div
          className="ListItem"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <p
            className="ListItem-Name"
          >
            asdf
          </p>
          <span
            className="ListItem-Remove"
          >
            <RemoveButton
              onClick={[Function]}
            >
              <button
                className="Remove-Button"
                onClick={[Function]}
              >
                <img
                  alt="remove"
                  className="redx"
                  src="/img/red-x.svg"
                />
              </button>
            </RemoveButton>
          </span>
        </div>
      </ListItem>
    </div>
  </div>
</FileList>
`;

exports[`contains 3 FileProgress when 3 added 1`] = `
<div
  class="File-List"
>
  <header
    class="File-List-Header"
  >
    Bounty Files 3
  </header>
  <div
    class="List"
  >
    <div
      class="ListItem"
    >
      <p
        class="ListItem-Name"
      >
        asdf
      </p>
    </div>
    <div
      class="ListItem"
    >
      <p
        class="ListItem-Name"
      >
        demo
      </p>
    </div>
    <div
      class="ListItem"
    >
      <p
        class="ListItem-Name"
      >
        test
      </p>
    </div>
  </div>
</div>
`;

exports[`renders without crashing 1`] = `
<div
  class="File-List"
>
  <header
    class="File-List-Header"
  >
    Bounty Files 0
  </header>
  <div
    class="List"
  >
    
  </div>
</div>
`;
